--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
   <div id="message-container"></div>
-  <input type="text" id="message-input" placeholder="Type your message...">
+  <textarea id="message-input" placeholder="Type your message..." rows="5"></textarea>
+
   <button id="send-button">Send</button>
 
   <script src="/socket.io/socket.io.js"></script>
