--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     <div id="message-container"></div>
     <textarea id="message-input" placeholder="Type your message..." rows="5"></textarea>
     <button id="send-button">Send</button>
+    <button id="leave-button">Leave Room</button>
+    <button id="back-button">Go Back</button>
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
